<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="8pt"></TextView>


        <EditText
            android:id="@+id/BugTitle"
            android:layout_height="wrap_content"
            android:hint="@string/hintbugtitle"
            android:background="@android:drawable/editbox_background"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/BugAssignedTo"
            android:layout_height="wrap_content"
            android:hint="@string/hintassignedto"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:layout_width="fill_parent"></EditText>


        <EditText
            android:id="@+id/BugDetails"
            android:layout_height="wrap_content"
            android:hint="@string/hintbugdetails"
            android:inputType="textMultiLine"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:lines="5"
            android:layout_width="fill_parent"></EditText>
        
 		<CheckBox
	        android:id="@+id/chkprivate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Mark as Private" />
 
        <Button
            android:id="@+id/BugCreate"
            android:layout_height="wrap_content"
            android:text="@string/bugcreatebtn"
            android:layout_width="fill_parent"></Button>

    </LinearLayout>
</ScrollView>